--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -79,6 +79,17 @@
               style="@style/Widget.Material3.Button.TextButton" />
 
           <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_deleteProject"
+            style="@style/Widget.Material3.Button.TextButton"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/setting_deleteProject"
+            android:textSize="16sp"
+            app:cornerRadius="12dp"
+            app:iconGravity="textStart"
+            app:iconPadding="12dp" />
+          <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_projectNumber"
               android:layout_width="match_parent"
               android:layout_height="56dp"
