--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -11,12 +11,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <TextView
-      android:id="@+id/tv_friend_title"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="好友"
-      android:textSize="34sp" />
+        android:id="@+id/tv_friend_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Friend_title"
+        android:textSize="34sp" />
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rcy_friends"
       android:layout_width="match_parent"
