--- a/app/src/main/res/layout/item_addfriend.xml
+++ b/app/src/main/res/layout/item_addfriend.xml
@@ -13,19 +13,19 @@
     android:padding="16dp">
 
     <Button
-      android:id="@+id/btn_add_friend"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignParentEnd="true"
-      android:layout_centerVertical="true"
-      android:paddingStart="12dp"
-      android:paddingEnd="12dp"
-      android:background="#2196F3"
-      android:minHeight="40dp"
-      android:minWidth="80dp"
-      android:text="加為好友"
-      android:textColor="#FFFFFF"
-      android:textSize="12sp" />
+        android:id="@+id/btn_add_friend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:background="#2196F3"
+        android:minWidth="80dp"
+        android:minHeight="40dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:text="@string/Friend_add"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp" />
 
     <LinearLayout
       android:id="@+id/layout_user_info"
